--- a/conteudos/estilos/segunda.css
+++ b/conteudos/estilos/segunda.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 h1{
-    font-size: 500%;
-    color: aqua;
+    font-size: 300%;
+    color: rgb(1, 146, 57);
+}
+body{
+    background-color: rgb(32, 32, 32);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
