--- a/conteudos/estilos/inicio.css
+++ b/conteudos/estilos/inicio.css
@@ -35,6 +35,7 @@
   }
   
   nav ul li a {
+    cursor: pointer;
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -58,14 +59,17 @@
     margin-bottom: 30px;
   }
   
-  .foto-sala {
+  #foto-sala {
     width: 10%;
     border-radius: 10px;
     margin-top: 10px;
     transition: transform 1s;
   }
-  .foto-sala:hover{
+  #foto-sala:hover{
       transform: scale(1.5);
+  }
+  #foto-sala.grande{
+    width: 100%;
   }
   
   footer {
